Fixed bug #36337 (ReflectionProperty fails to return correct visibility).