ext/reflection/php_reflection.c
@@ -20,7 +20,7 @@
    +----------------------------------------------------------------------+
 */
 
-/* $Id: php_reflection.c,v 1.164.2.21 2006/02/08 00:36:57 iliaa Exp $ */
+/* $Id: php_reflection.c,v 1.164.2.22 2006/02/13 14:49:26 iliaa Exp $ */
 
 #ifdef HAVE_CONFIG_H
 #include "config.h"
@@ -3560,14 +3560,10 @@ ZEND_METHOD(reflection_property, __construct)
 	
 	if (!(property_info->flags & ZEND_ACC_PRIVATE)) {
 		/* we have to seach the class hierarchy for this (implicit) public or protected property */
-		zend_class_entry *tmp_ce = ce->parent;
+		zend_class_entry *tmp_ce = ce;
 		zend_property_info *tmp_info;
 		
-		while (tmp_ce && zend_hash_find(&tmp_ce->properties_info, name_str, name_len + 1, (void **) &tmp_info) == SUCCESS) {
-			if (tmp_info->flags & ZEND_ACC_PRIVATE) {
-				/* private in super class => NOT the same property */
-				break;
-			}
+		while (tmp_ce && zend_hash_find(&tmp_ce->properties_info, name_str, name_len + 1, (void **) &tmp_info) != SUCCESS) {
 			ce = tmp_ce;
 			property_info = tmp_info;
 			tmp_ce = tmp_ce->parent;
@@ -4324,7 +4320,7 @@ PHP_MINFO_FUNCTION(reflection) /* {{{ */
 	php_info_print_table_start();
 	php_info_print_table_header(2, "Reflection", "enabled");
 
-	php_info_print_table_row(2, "Version", "$Id: php_reflection.c,v 1.164.2.21 2006/02/08 00:36:57 iliaa Exp $");
+	php_info_print_table_row(2, "Version", "$Id: php_reflection.c,v 1.164.2.22 2006/02/13 14:49:26 iliaa Exp $");
 
 	php_info_print_table_end();
 } /* }}} */
